...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="morningpages.app.niklas.morningpages.FinishedActivity">

    <ImageView
        android:id="@+id/monkeyCage"
        android:layout_width="218dp"
        android:layout_height="290dp"
        app:srcCompat="@drawable/monkey_cage"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="8dp"
...
