<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="journal.app.niklas.a5minutejournal.WriteActivity">

    <item
        android:id="@+id/show_timer"
        android:orderInCategory="100"
        android:title="00:00:00"
        app:showAsAction="always" />

</menu>
